# ApprovalTests.cpp

ApprovalTests/: Approvals.cpp  Approvals.h  CMakeLists.txt
ApprovalTests/comparators/: ComparatorDisposer.cpp  ComparatorDisposer.h  ComparatorFactory.cpp  ComparatorFactory.h  TextFileComparator.cpp  TextFileComparator.h
ApprovalTests/core/: ApprovalException.cpp  ApprovalException.h  ApprovalWriter.h  FileApprover.cpp  FileApprover.h
ApprovalTests/integrations/google/: GoogleConfiguration.cpp  GoogleConfiguration.h  GoogleCustomizationsFactory.cpp  GoogleCustomizationsFactory.h
ApprovalTests/launchers/: SystemLauncher.cpp  SystemLauncher.h
ApprovalTests/namers/: ApprovalTestNamer.cpp  ApprovalTestNamer.h  DefaultNamerDisposer.cpp  DefaultNamerDisposer.h  DefaultNamerFactory.cpp  DefaultNamerFactory.h  ExistingFileNamer.cpp  ExistingFileNamer.h  HelpMessages.cpp  HelpMessages.h  NamerFactory.cpp  NamerFactory.h  SectionNameDisposer.cpp  SectionNameDisposer.h  SeparateApprovedAndReceivedDirectoriesNamer.cpp  SeparateApprovedAndReceivedDirectoriesNamer.h  SubdirectoryDisposer.cpp  SubdirectoryDisposer.h
ApprovalTests/reporters/: AutoApproveIfMissingReporter.cpp  AutoApproveIfMissingReporter.h  AutoApproveReporter.cpp  AutoApproveReporter.h  BlockingReporter.cpp  BlockingReporter.h  CIBuildOnlyReporter.cpp  CIBuildOnlyReporter.h  CIBuildOnlyReporterUtils.cpp  CIBuildOnlyReporterUtils.h  ClipboardReporter.cpp  ClipboardReporter.h  CombinationReporter.cpp  CombinationReporter.h  CommandReporter.cpp  CommandReporter.h  ConvertForCygwin.cpp  ConvertForCygwin.h  CustomReporter.cpp  CustomReporter.h  DefaultFrontLoadedReporter.cpp  DefaultFrontLoadedReporter.h  DefaultReporter.cpp  DefaultReporter.h  DefaultReporterDisposer.cpp  DefaultReporterDisposer.h  DefaultReporterFactory.cpp  DefaultReporterFactory.h  DiffInfo.cpp  DiffInfo.h  DiffPrograms.cpp  DiffPrograms.h  DiffReporter.cpp  DiffReporter.h  FirstWorkingReporter.cpp  FirstWorkingReporter.h  FrontLoadedReporterDisposer.cpp  FrontLoadedReporterDisposer.h  FrontLoadedReporterFactory.cpp  FrontLoadedReporterFactory.h  (+9 more)
ApprovalTests/utilities/: ExceptionCollector.cpp  ExceptionCollector.h  FileUtils.cpp  FileUtils.h  FileUtilsSystemSpecific.cpp  FileUtilsSystemSpecific.h  MachineBlocker.cpp  MachineBlocker.h  StringUtils.cpp  StringUtils.h  SystemUtils.cpp  SystemUtils.h
ApprovalTests/writers/: ExistingFile.cpp  ExistingFile.h  StringWriter.cpp  StringWriter.h
doc/mdsource/: CodingPatterns.source.md
examples/googletest_existing_main/: GoogleTestApprovalsTests.cpp
tests/Catch2_Tests/namers/: Catch2NamerTests.cpp
tests/Catch2_Tests/utilities/: FileUtilsSystemSpecificTests.cpp
tests/DocTest_Tests/: VectorTests.cpp
tests/DocTest_Tests/comparators/: ComparatorDisposerTest.cpp
tests/DocTest_Tests/core/: FileApproverTests.cpp
tests/DocTest_Tests/docs/: OverviewExamples.cpp
tests/DocTest_Tests/namers/: NamerTests.cpp
tests/DocTest_Tests/reporters/: CustomReporterTests.cpp
tests/DocTest_Tests/reporters/approval_tests/: CommandLineReporterTests.Test_Command_Lines.approved.txt  CustomReporterTests.Creating_Custom_Reporters.approved.txt
tests/DocTest_Tests/utilities/: SystemUtilsTests.cpp
tests/GoogleTest_Tests/namers/: GoogleFixtureNamerCustomizationTests.cpp
